methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:8: error: not found: value rangee
rangee()
^