methods.picture.PatternPicture.scala.code
override def run() {def faireV(c:Color) 
             {avance();setCouleurBrosse(c);baisseBrosse();leveBrosse();gauche();avance();gauche();avance();baisseBrosse();leveBrosse();gauche();avance();gauche();avance()}
                    
                    def faireW(c:Color){avance();setCouleurBrosse(c);baisseBrosse();leveBrosse();gauche();avance();droite();avance();baisseBrosse();leveBrosse();droite;avance();gauche();avance()}
                    
                    def motif(){faireV(Color.RED);faireW(Color.BLUE);faireV(Color.RED);faireW(Color.BLUE)
}
rangee()
                   }